--- a/ghostty/dot-config/ghostty/config
+++ b/ghostty/dot-config/ghostty/config
@@ -29,8 +29,16 @@ app-notifications = no-clipboard-copy,no-config-reload
 # Key bindings for common actions
 keybind = ctrl+shift+c=copy_to_clipboard
 keybind = ctrl+shift+v=paste_from_clipboard
+
 keybind = ctrl+shift+n=new_window
-keybind = ctrl+t=new_tab
+keybind = ctrl+shift+t=new_tab
+keybind = ctrl+shift+w=close_surface
+
+keybind = ctrl+shift+alt+arrow_down=resize_split:down,10
+keybind = ctrl+shift+alt+arrow_left=resize_split:left,10
+keybind = ctrl+shift+alt+arrow_right=resize_split:right,10
+keybind = ctrl+shift+alt+arrow_up=resize_split:up,10
+
 keybind = ctrl+plus=increase_font_size:1
 keybind = ctrl+minus=decrease_font_size:1
 keybind = ctrl+zero=reset_font_size
