--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# NeoVim is handled in separate repo
 /nvim/dot-config/nvim/
-config-dankcolors
 
+# DankMaterialShell colorschemes are changed every dark/light theme switch
+niri/dot-config/niri/dms/colors.kdl
+ghostty/dot-config/ghostty/config-dankcolors
